--- a/style.css
+++ b/style.css
@@ -96,6 +96,12 @@ margin-left: auto;
   width:100%;
 
 }
+
+.madeby{
+  text-align: center;
+  text-size:0.3em;
+  
+}
 /***********************************************************************
  *  Red Background
  **********************************************************************/
