--- a/style.css
+++ b/style.css
@@ -98,9 +98,9 @@ margin-left: auto;
 }
 
 .madeby{
-  text-align: center;
+  align-items: center;
   text-size:0.3em;
-  
+
 }
 /***********************************************************************
  *  Red Background
